This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

31-May-2004 (Lars Duening)  (3.3.563)
  - (smalloc.c) When using PThreads, don't request memory via sbrk() - on
       Linux systems this leads to corrupted memory.
  - (simulate) Added a new runtime limit LIMIT_COST (f-010320).
  - (interpret, simulate) For limited() and set_limits() the limit
       values are passed to the privilege_violation call (f-020131-0).

28-May-2004 (Lars Duening)  (3.3.562)
  - (interpret.c, port.h, util/indent/indent_globs.h) Adapted for gcc 3.4.0
      (thanks, Ralph!).
  - (mud/lp-245) Removed 'missing return value' warnings.

26-May-2004 (Lars Duening)  (3.3.561)
  - (prolang.y) The 'public shadows private' warning now checks only
       for genuinely private functions, not merely hidden ones. This should
       make the warning more accurate.

25-May-2004 (Lars Duening)  (3.3.560)
  - (prolang.y, interpret.c, simulate, string_spec, closure.c) Added
       modifier 'reserve' to the catch() instruction in order to
       specify the reserved amount of eval ticks at runtime (suggested
       by Menaures).

24-May-2004 (Lars Duening)  (3.3.559)
  - (prolang.y) The compiler emits warnings if the functions defined by
       two inherits collide in their visibility. If this produces too
       much output, we will have to control this by a pragma. (suggested 
       by Bardioc).
  - (simulate.c) If a catch() doesn't have enough eval time left
       (less than CATCH_EVAL_COST), this is thrown as an error from inside
       the catch instead of causing the catch to return 0. (suggested
       by Menaures).
  - (efuns.c) Removed compiler warnings (thanks, Guandalug!)

23-May-2004 (Lars Duening)  (3.3.558)
  - (object.c) When restoring structs and the saved data is longer than
       the struct, make sure that the extra values are skipped in the
       data.

23-May-2004 (Lars Duening)  (3.3.557)