@@ -60,19 +60,19 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 563)
-(Parent-Version lpmud 3-3 562)
+(Project-Version lpmud 3-3 564)
+(Parent-Version lpmud 3-3 563)
 (Version-Log "
-  - (smalloc.c) When using PThreads, don't request memory via sbrk() - on
-       Linux systems this leads to corrupted memory.
-  - (simulate) Added a new runtime limit LIMIT_COST (f-010320).
-  - (interpret, simulate) For limited() and set_limits() the limit
-       values are passed to the privilege_violation call (f-020131-0).
+  - (interpret.c) Calling privilege_violation() with only three arguments
+       accidentally instructed the interpreter to pass four (reported
+       by Ralph).
+  - (simulate.c) limited() accidentally removed all arguments for the
+       closure to execute.
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Sun, 30 May 2004 01:12:23 -0600")
+(Checkin-Time "Sun, 30 May 2004 15:19:51 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -110,8 +110,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.626 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.359 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.627 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.360 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -179,7 +179,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.18 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.20 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.82 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.83 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.40 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -200,7 +200,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.38 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.58 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.59 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.8 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.67 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
@@ -297,7 +297,7 @@
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.6 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.7 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.36 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.127 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.128 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.97 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
