@@ -1,7 +1,14 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
-31-May-2004 (Lars Duening)  (3.3.563)
+30-May-2004 (Lars Duening)  (3.3.564)
+  - (interpret.c) Calling privilege_violation() with only three arguments
+       accidentally instructed the interpreter to pass four (reported
+       by Ralph).
+  - (simulate.c) limited() accidentally removed all arguments for the
+       closure to execute.
+
+30-May-2004 (Lars Duening)  (3.3.563)
   - (smalloc.c) When using PThreads, don't request memory via sbrk() - on
        Linux systems this leads to corrupted memory.
   - (simulate) Added a new runtime limit LIMIT_COST (f-010320).
